# ltstatus

./: .gitignore  .isort.cfg  .list-files  .pylintrc  README.md  flake.nix  pyproject.toml  requirements.in  requirements.txt  run  setup  test  todo
docs/: README.md
examples/: draft.py  dwm-status.py  test.py  tmux-status.py
python/ltstatus/: __init__.py  __main__.py  alternative.py  core.py  formats.py  indicators.py  outputs.py  threading.py  tools.py
python/ltstatus/monitors/: __init__.py  _bluetooth.py  _cpu.py  _datetime.py  _diskspace_alerts.py  _dropbox.py  _nvidia.py  _process_alerts.py  _redshift.py  _sound.py  _spotify.py  bluetooth.py  cores.py  cpu.py  datetime.py  diskspace_alerts.py  dropbox.py  nvidia.py  process_alerts.py  redshift.py  sound.py  spotify.py
python/ltstatus/new_monitors/: __init__.py  _bluetooth.py  _cpu.py  _datetime.py  _diskspace_alerts.py  _dropbox.py  _nvidia.py  _process_alerts.py  _redshift.py  _sound.py  _spotify.py
src/ltstatus/: __init__.py  core.py  main.py  monitor.py  outputs.py  tools.py
src/ltstatus/monitors/: __init__.py  bluetooth.py  cpu.py  datetime.py  diskpie.py  diskspace_alerts.py  nvidia.py  process_alerts.py  redshift.py  sound.py  spotify.py  top.py
