[project]
name = "ltstatus"
version = "2.3.0"
description = "low-tec status"
readme = "docs/README.md"
authors = [{ name = "Daniel Kuettel", email = "dkuettel@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "jeepney",      # for DBus
    "nvidia-ml-py", # for nvidia gpus
    "psutil",       # for basic system information
    "typer",
    "inotify",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
ltstatus = "ltstatus.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ltstatus"]

[tool.uv.build-backend]
namespace = true

[tool.pyright]
include = ["src"]
typeCheckingMode = "standard"
